<resources>
    <string name="app_name">SuperMarket</string>
    <string name="item_name">Item Name</string>
    <string name="quantity">Quantity</string>
    <string name="rate">Rate</string>
    <string name="total_cost">Total Cost</string>
    <string name="amount">Amount</string>
    <string name="add_items_to_cart">Add items to cart</string>
    <string name="enter_item_name">Enter item name</string>
    <string name="enter_item_quantity">Enter item quantity</string>
    <string name="enter_item_price">Enter item price</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
</resources>