<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="8dp"
    app:cardCornerRadius="5dp"
    app:cardElevation="4dp"
    app:cardBackgroundColor="@color/primary_light">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/item_details"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="5">

            <TextView
                android:id="@+id/item_name"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="2"
                android:padding="4dp"
                android:text="@string/item_name"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/item_quantity"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="1"
                android:padding="4dp"
                android:text="@string/quantity"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/item_rate"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="0.8"
                android:padding="4dp"
                android:text="@string/rate"
                android:textColor="@color/white" />

            <ImageView
                android:id="@+id/item_delete"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="3dp"
                android:layout_weight="0.5"
                android:padding="4dp"
                android:src="@drawable/ic_baseline_delete_24" />
        </LinearLayout>

        <TextView
            android:id="@+id/total_cost"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_details"
            android:layout_margin="3dp"
            android:layout_toLeftOf="@id/total_amount"
            android:padding="4dp"
            android:text="@string/total_cost"
            android:textColor="@color/white" />

        <TextView
            android:id="@+id/total_amount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/item_details"
            android:layout_alignParentEnd="true"
            android:layout_margin="3dp"
            android:padding="4dp"
            android:text="@string/amount"
            android:textColor="@color/white" />
    </RelativeLayout>

</androidx.cardview.widget.CardView>